# awesome-foamlib

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml
docs/: .gitignore  docker_runner.md
docs/examples/: README.rst  __init__.py  plot_cavity_flow.py
docs/source/: __init__.py  conf.py  index.rst  sg_execution_times.rst
docs/source/auto_examples/: index.rst  plot_cavity_flow.codeobj.json  plot_cavity_flow.py  plot_cavity_flow.rst  plot_example.codeobj.json  plot_example.py  plot_example.rst
src/awesome_foamlib/: __init__.py  __main__.py  docker_runner.py  download.py
test_cavity/: system_controlDict.txt
