[project]
name = "awesome-foamlib"
version = "0.1.0"
description = "An awesome list for foamlib with OpenFOAM tutorials using sphinx-gallery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "Tetsuo Koyama", email = "tkoyama010@gmail.com" }
]
license = { text = "MIT" }
keywords = ["foamlib", "OpenFOAM", "CFD", "awesome-list"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/tkoyama010/awesome-foamlib"
Repository = "https://github.com/tkoyama010/awesome-foamlib"
Issues = "https://github.com/tkoyama010/awesome-foamlib/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "sphinx>=7.0.0",
    "sphinx-gallery>=0.15.0",
]
