[project]
name = "awesome-foamlib"
version = "0.1.0"
description = "An awesome list for foamlib with OpenFOAM tutorials using sphinx-gallery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "foamlib>=1.5.5",
    "pyvista>=0.46.4",
    "scipy>=1.16.3",
]
authors = [
    { name = "Tetsuo Koyama", email = "tkoyama010@gmail.com" }
]
license = "GPL-3.0-only"
keywords = ["foamlib", "OpenFOAM", "CFD", "awesome-list"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/tkoyama010/awesome-foamlib"
Repository = "https://github.com/tkoyama010/awesome-foamlib"
Issues = "https://github.com/tkoyama010/awesome-foamlib/issues"
Documentation = "https://awesome-foamlib.readthedocs.io"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-gallery>=0.15.0",
    "sphinx-rtd-theme>=2.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "ruff>=0.14.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
